crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__mpt_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
### Instruction
Explain photosynthesis briefly.

### Response
