crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__nemotron_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<extra_id_0>System
You are a science tutor.
<extra_id_1>User
What is ATP?
<extra_id_1>Assistant
