crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__openchat_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
GPT4 Correct User: You are a Rust expert.

How does borrowing work?<|end_of_turn|>GPT4 Correct Assistant:
