crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__persimmon_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
You are a Rust expert.

human: How does borrowing work?
adept:
