crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__persimmon_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
You are a science tutor.

human: What is ATP?
adept:
