crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__phi2_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
You are a Rust expert.

Instruct: How does borrowing work?
Output:
