crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__phi2_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
Instruct: Explain photosynthesis briefly.
Output:
