crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__phi2_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
You are a science tutor.

Instruct: What is ATP?
Output:
