crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__phi3_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|system|>
You are a helpful AI assistant.<|end|>
<|user|>
Explain photosynthesis briefly.<|end|>
<|assistant|>
